# stormdeck

./: .gitignore  README.md  justfile  mise.toml  rust-toolchain.toml  seo-kit.toml
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/workflows/: auto-release.yml  ci.yml  deploy-infra.yml  deploy-web.yml  deploy.yml  release.yml
.just/: build.just  common.just  weather.just
cdk/: cdk.json  justfile  package.json  pnpm-lock.yaml  tsconfig.json
cdk/lambda/email-forwarder/: index.mjs
cdk/lib/: email-stack.ts  github-oidc-stack.ts  stormdeck-stack.ts
crates/: Cargo.toml
crates/weather-ingest/: Cargo.toml
crates/weather-ingest/src/: cities.json  contract.rs  gfs.rs  main.rs  s3.rs
desktop/: Cargo.toml  README.md  justfile
desktop/src/: main.rs  source.rs  style.rs  window.rs
desktop/src/input/: mod.rs  pan_handler.rs  shift_handler.rs  zoom_handler.rs
desktop/src/ui/: mod.rs
desktop/src/wind/: mod.rs  particles.rs  particles.wgsl  trails.wgsl  wind.wgsl
scripts/: build-martin-lambda.sh  dev.sh  get-tiles.sh  next-version.sh  release.sh
seo-reports/: stormdeck.live-20260701T215935Z.json  stormdeck.live-20260701T215935Z.md  stormdeck.live-20260702T042616Z.json  stormdeck.live-20260702T042616Z.md
tiles/: justfile
web/: .env.development  biome.json  index.html  justfile  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/public/: 404.html  robots.txt  sitemap.xml
web/src/: App.tsx  Timeline.tsx  basemap.ts  config.ts  layers.ts  main.tsx  version.ts  vite-env.d.ts  weather.ts
web/src/components/ui/: label.tsx  slider.tsx  switch.tsx
web/src/layers/: alerts.tsx  cape.tsx  capeRasterLayer.ts  citytile.tsx  index.ts  legend.tsx  precip.tsx  radar.tsx  rasterShared.ts  refcRasterLayer.ts  scalarRasterLayer.ts  swatch.tsx  temp.tsx  types.ts  wind.tsx  windRasterLayer.ts  windShared.ts
